--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -121,6 +121,7 @@
       <link rel="stylesheet" href="{{ 'component-predictive-search.css' | asset_url }}" media="print" onload="this.media='all'">
     {%- endif -%}
 
+    <script src="https://unpkg.com/vue@next"></script>
     <script>document.documentElement.className = document.documentElement.className.replace('no-js', 'js');</script>
   </head>
 
