Attempting to add Vue in cart form

--- a/sections/main-product.liquid
+++ b/sections/main-product.liquid
@@ -406,6 +406,8 @@
       </div>
     </modal-dialog>
   {%- endfor -%}
+
+  {% render 'add-to-cart-form' %}
 </section>
 
 {% javascript %}
@@ -446,6 +448,7 @@
 {% endjavascript %}
 
 <script>
+  Vue.config.devtools = true
   document.addEventListener('DOMContentLoaded', function() {
     function isIE() {
       const ua = window.navigator.userAgent;
