--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -122,7 +122,10 @@
     {%- endif -%}
 
     <script src="https://unpkg.com/vue@next"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14/dist/vue.js"></script> -->
+
     <script>document.documentElement.className = document.documentElement.className.replace('no-js', 'js');</script>
+    
   </head>
 
   <body class="gradient">
