fixed Vue CDN issue

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -121,7 +121,9 @@
       <link rel="stylesheet" href="{{ 'component-predictive-search.css' | asset_url }}" media="print" onload="this.media='all'">
     {%- endif -%}
 
-    <script src="https://unpkg.com/vue@next"></script>
+    <!-- <script src="https://unpkg.com/vue@next"></script> -->
+    <script src="https://vuejs.org/js/vue.min.js"></script>
+    <!-- <script src="https://unpkg.com/vue@3.0.11/dist/vue.global.js"></script> -->
     <!-- <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14/dist/vue.js"></script> -->
 
     <script>document.documentElement.className = document.documentElement.className.replace('no-js', 'js');</script>
