--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -32,6 +32,8 @@
     <script src="{{ 'global.js' | asset_url }}" defer="defer"></script>
     {{ content_for_header }}
 
+    <script src="https://unpkg.com/vue@next"></script>
+
     {%- liquid
       assign body_font_bold = settings.type_body_font | font_modify: 'weight', 'bold'
       assign body_font_italic = settings.type_body_font | font_modify: 'style', 'italic'
@@ -121,7 +123,7 @@
       <link rel="stylesheet" href="{{ 'component-predictive-search.css' | asset_url }}" media="print" onload="this.media='all'">
     {%- endif -%}
 
-    <script src="https://unpkg.com/vue@next" defer="defer"></script>
+    
     <!-- <script src="https://unpkg.com/vue@3.0.11/dist/vue.global.js"></script> -->
 
     <script>document.documentElement.className = document.documentElement.className.replace('no-js', 'js');</script>
