--- a/sections/alternate-product.liquid
+++ b/sections/alternate-product.liquid
@@ -5,23 +5,12 @@
 
 <section class="page-width">
   <div class="product grid grid--1-col {% if product.media.size > 0 %}grid--2-col-tablet{% endif %}">
-    {%- if product.selected_or_first_available_variant.featured_media != null -%}
-      {%- assign media = product.featured_media -%}
-      <img src="{{ media | img_url: '300x' }}"
-        loading="lazy"
-      > 
-    {% else %}
-     {% render 'icon-unavailable' %}
-
-    {% endif %}
-    <!-- <div class="grid__item product__media-wrapper"> -->
-        <!-- {%- assign variant_images = product.images | where: 'attached_to_variant?', true | map: 'src' -%} -->
-        <!-- {%- if product.selected_or_first_available_variant.featured_media != null -%} -->
-          <!-- {%- assign media = product.featured_media -%} -->
     
-          <!-- <img src="{{ media | img_url: '1500x' }}"> -->
-          
-        <!-- {%- endif -%} -->
+    <!-- <div class="grid__item product__media-wrapper"> -->
+        {%- assign variant_images = product.images | where: 'attached_to_variant?', true | map: 'src' -%}
+          {%- assign media = product.featured_media -%}
+    
+          <img src="{{ media | img_url: '300x' }}">
       
     <!-- </div> -->
     <div class="product__info-wrapper grid__item">
