axios setup and skeleton

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -32,6 +32,7 @@
     <script src="{{ 'global.js' | asset_url }}" defer="defer"></script>
     {{ content_for_header }}
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.24.0/axios.min.js"></script>
     <script src="https://unpkg.com/vue@next"></script>
 
     {%- liquid
